# smttask

./: .gitignore  README  README.md  TODO.txt  descriptions.py  dev-env.yaml  pyproject.toml  requirements.txt  setup.py  smttask.py
.github/workflows/: .gitrepo  LICENSE  README.md  build.yml  publish-on-pypi.yml  publish-on-testpypi.yml
docs/: Exploring recorded tasks.ipynb  Exploring recorded tasks.py  README.md  basics.rst  cli.rst  conf.py  example_output_smttask_store_create-surrogates.md  index.rst  quickstart.md  requirements.txt  serialization.rst  task_outputs.rst  test.rst  todo.md  usage_examples.rst
docs/dev-docs/: numpy-serialization.Rmd
docs/getting_started/: basics.rst  cli.rst  index.rst  quickstart.md  usage_examples.rst  workflows.rst
docs/in_depth/: Exploring recorded tasks.md  Exploring recorded tasks.py  index.rst  serialization.rst  task_outputs.rst
docs/tutorials/: index.rst
docs/user-api/: base.rst  cli.rst  decorators.rst  example_output_smttask_store_create-surrogates.md  index.rst  rsview.rst  task_types.rst  typing.rst  user-api-index.rst  workflows.rst
example/: Workflow example.ipynb  config.py  postre-password  run.py  tasks.py
example/fft_example/: tasks.py
example/fft_example/params/: gen.ntparameterset
examples/: Workflow example.ipynb
examples/fft_example/: .gitignore  run.py  run_expanded.py  tasks.py  tasks_backup.py  tasks_expanded.py
smttask/: __init__.py  _utils.py  base.py  config.py  decorators.py  input_types.py  multiprocessing.py  networkx.py  records.py  smttask.py  task_filters.py  task_generators.py  task_types.py  tqdm.py  types.py  typing.py  ui.py  utils.py  workflows.py
smttask/view/: README.md  __init__.py  config.py  recordfilter.py  recordstoreview.py  recordview.py  utils.py
src/smttask/: __init__.py  _utils.py  base.py  config.py  decorators.py  examples.py  hashing.py  iotools.py  multiprocessing.py  networkx.py  param_utils.py  task_filters.py  task_generators.py  task_types.py  tqdm.py  typing.py  ui.py  utils.py  workflows.py
src/smttask/hashing/: __init__.py  sha1_hashing.py  xx_hashing.py
src/smttask/view/: README.md  config.py  recordfilter.py  recordstoreview.py  recordview.py  utils.py
tests/: conftest.py  nbtest_rsview_viz.py  remove_usersite.sh  smoke_test.sh  tasks_for_testing.py  test_digests.py  test_metadata.py  test_output_files.py  test_pydantic_input.py  test_records.py  test_single_tasks.py  test_typing.py  test_utils.py  test_workflows.py  types_for_testing.py  utils_for_testing.py  wip_test_ui.py
