[build-system]
# setuptools version required for project configured entirely with pyproject.toml
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smttask"
authors = [
    {name = "Alexandre René", email = "arene010@uottawa.ca"},
]
description="Task wrapper for the Sumatra API"
readme = "README.md"
requires-python = ">=3.11"  # 3.10 provides union type expressions like X | Y
                            # 3.11 fixes an issue with defining ParamColl (in 3.10, `get_type_hints` fails on the KW_ONLY annotations)

license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pydantic>=2",             # We use v2 for the ValConfig, but still v1 for the TaskInputs/TaskOutputs  (until scityping is upgraded to fully use v2)
    "xxhash",                  # Used to compute hashes. Can use SHA1 as a fallback
    "numpy",
    "pandas",                  # Used in smttask.view
    "sumatra[git]>=0.8",
    #"psycopg2",
    "scityping>v0.6.5",        # 0.6.5 required for annex files + other fixes; >0.6.5 required for Pydantic v2 support in ValConfig
    #"parameters",             # vendorized within sumatra
    "click>=7.1",              # Avoid bumping to v8 until Jupyter Book allows it
    "tabulate",
    "collections-extended",    # For ordered set
    "tqdm>=4.62",
    "reorder_editable",  # For added robustness when cloning projects; see _utils.py
    "rich",              # For the console UI
    "GitPython",         # Almost everyone will use git. Those using another VC system will know to install the required dependency.
    "valconfig",
    "dill"               # Required by iotools
]

dynamic = ["version"]

[project.optional-dependencies]
viz = ["networkx", "holoviews", "bokeh"]
test = ["pytest", "scipy", "xarray"]
docs = ["pydata-sphinx-theme", "myst-nb", "sphinx-click"]

[project.scripts]
smttask = "smttask.ui:cli"

[project.urls]
"Documentation" = "https://sumatratask.readthedocs.io/"
"Bug Tracker" = "https://github.com/alcrene/smttask/issues"
"Source" = "https://github.com/alcrene/smttask"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
write_to = "src/smttask/_version.py"